# uber___tango

./: .bazelproject  .codecov.yml  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  METADATA  MODULE.bazel  Makefile  README.md  go.mod  go.sum
.github/: CODEOWNERS  dependabot.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: BUILD.bazel  build_and_test.yml  ci.yml
config/: BUILD.bazel  config.go  repository_config.go  service_config.go  storage_config.go
controller/: BUILD.bazel  README.md  controller.go  controller_test.go  distance_filter.go  distance_filter_test.go  errors.go  getchangedtargetgraph.go  getchangedtargets.go  getchangedtargets_test.go  getchangedtargetsandedges.go  getchangedtargetsandedges_test.go  gettargetgraph.go  gettargetgraph_test.go  output_filter.go  output_filter_test.go  testhelper_test.go
core/bazel/: BUILD.bazel  bazel.go  bazel_test.go  command.go  query.go  query_test.go  stream.go
core/bazel/bazelmock/: BUILD.bazel  bazelmock.go
core/bazel/commandermock/: BUILD.bazel  commandermock.go
core/bazelrunner/: BUILD.bazel  graph.go  native.go  native_test.go
core/bazelrunner/mock/: BUILD.bazel  mock.go
core/cachekey/: BUILD.bazel  cachekey.go  cachekey_test.go
core/common/: BUILD.bazel  errors.go  nameidmapper.go  nameidmapper_test.go  utils.go  utils_test.go
core/config/: BUILD.bazel  config.go  repository_config.go  storage_config.go
core/controller/: BUILD.bazel  controller.go  getchangedservices.go  getchangedtargetgraph.go  getchangedtargets.go  getchangedtargets_test.go  gettargetgraph.go  gettargetgraph_test.go
core/errors/: BUILD.bazel  errors.go  errors_test.go
core/execcmd/: BUILD.bazel  execcmd.go
core/git/: BUILD.bazel  git.go  git_test.go
core/git/gitmock/: BUILD.bazel  gitmock.go
core/itg/cache/: BUILD.bazel  cache.go
core/itg/changeanalyzer/: BUILD.bazel  changeanalyzer.go  changeanalyzer_test.go
core/itg/graph/: BUILD.bazel  graph.go  graph_test.go  invalidate.go  invalidate_test.go  update.go  update_test.go
core/itg/workspaceutils/: BUILD.bazel  workspaceutils.go  workspaceutils_test.go
core/repomanager/: BUILD.bazel  repo_manager.go  repo_manager_test.go
core/repomanager/mock/: BUILD.bazel  repomanagermock.go
core/storage/: BUILD.bazel  changedtargetsandedgesreader.go  changedtargetsandedgesreader_test.go  changedtargetsreader.go  ctxreader.go  graphreader.go  graphwriter.go  memstorage.go  reader.go  storage.go  storage_test.go
core/storage/disk/: BUILD.bazel  disk.go  disk_test.go
core/storage/storagemock/: BUILD.bazel  readermock.go  storagemock.go
core/targethasher/: BUILD.bazel  graph.go  graph_test.go  sourcehasher.go  sourcehasher_test.go
core/workspace/: BUILD.bazel  gitrequest.go  gitrequest_test.go  request.go  request_test.go  workspace.go  workspace_test.go
core/workspace/requestmock/: BUILD.bazel  requestmock.go
core/workspace/workspacemock/: BUILD.bazel  workspacemock.go
docs/errors/: errors.md
docs/observability/: metrics.md
entity/: BUILD.bazel  build_description.go  computation_strategy.go  target_graph.go
example/: BUILD.bazel  README.md  main.go  tango-config.yaml
example/client/: BUILD.bazel  client.go
example/cmd/query-bench/: BUILD.bazel  main.go
graphrunner/: BUILD.bazel  graph_runner.go  native.go  native_test.go  shell.go
graphrunner/mock/: BUILD.bazel  mock.go
integration/: BUILD.bazel  benchmark_test.go  integration_test.go
integration/testdata/: tango-config.yaml.tmpl
internal/cachekey/: BUILD.bazel  cachekey.go  cachekey_test.go
internal/mapper/: BUILD.bazel  build_description.go  build_description_test.go  errors.go  errors_test.go  target_graph.go  target_graph_test.go
internal/mapper/idmapper/: BUILD.bazel  idmapper.go  idmapper_test.go
internal/targetdiff/: BUILD.bazel  compare.go  compare_test.go
internal/url/: BUILD.bazel  url.go  url_test.go
orchestrator/: BUILD.bazel  errors.go  errors_test.go  native_orchestrator.go  native_orchestrator_test.go  orchestrator.go
orchestrator/orchestratormock/: BUILD.bazel  orchestratormock.go
orchestrator/testdata/: config.yaml
proto/: BUILD.bazel  tango.proto
tangopb/: BUILD.bazel  tango.pb.go  tango.pb.yarpc.go  tango_grpc.pb.go
tangopb/tangopbmock/: BUILD.bazel  tangopbmock.go
tools/: BUILD.bazel
