bazel_dep(name = "rules_go", version = "0.57.0")
bazel_dep(name = "gazelle", version = "0.45.0")
bazel_dep(name = "rules_proto", version = "7.1.0")

GO_VERSION = "1.25.0"

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Download an SDK for the host OS & architecture as well as common remote execution
# platforms, using the version given from the `go.mod` file.
go_sdk.from_file(go_mod = "//:go.mod")

# Download an SDK for the host OS & architecture as well as common remote execution
# platforms, with a specific version.
go_sdk.download(version = GO_VERSION)

# Alternatively, download an SDK for a fixed OS/architecture.
go_sdk.download(
    goarch = "amd64",
    goos = "linux",
    version = GO_VERSION,
)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "com_github_bazelbuild_buildtools",
    "com_github_deckarep_golang_set_v2",
    "com_github_goccy_go_yaml",
    "com_github_gogo_protobuf",
    "com_github_golang_mock",
    "com_github_google_go_cmp",
    "com_github_stretchr_testify",
    "com_github_uber_go_tally",
    "org_golang_google_protobuf",
    "org_golang_x_sync",
    "org_uber_go_fx",
    "org_uber_go_goleak",
    "org_uber_go_mock",
    "org_uber_go_yarpc",
    "org_uber_go_zap",
)
