load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "controller",
    srcs = [
        "controller.go",
        "distance_filter.go",
        "getchangedtargetgraph.go",
        "getchangedtargets.go",
        "getchangedtargetsandedges.go",
        "gettargetgraph.go",
    ],
    importpath = "github.com/uber/tango/controller",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//core/common",
        "//core/storage",
        "//orchestrator",
        "//tangopb",
        "@com_github_uber_go_tally//:tally",
        "@org_uber_go_fx//:fx",
        "@org_uber_go_multierr//:multierr",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "controller_test",
    srcs = [
        "distance_filter_test.go",
        "getchangedtargets_test.go",
        "getchangedtargetsandedges_test.go",
        "gettargetgraph_test.go",
        "testhelper_test.go",
    ],
    embed = [":controller"],
    deps = [
        "//core/common",
        "//core/storage",
        "//core/storage/storagemock",
        "//orchestrator/orchestratormock",
        "//tangopb",
        "//tangopb/tangopbmock",
        "@com_github_gogo_protobuf//io",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@com_github_uber_go_tally//:tally",
        "@org_uber_go_mock//gomock",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zaptest",
    ],
)
