load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "example_lib",
    srcs = ["main.go"],
    importpath = "github.com/uber/tango/example",
    visibility = ["//visibility:private"],
    deps = [
        "//core/controller",
        "//core/git",
        "//core/repomanager",
        "//core/storage",
        "//orchestrator",
        "//tangopb",
        "@org_uber_go_yarpc//:yarpc",
        "@org_uber_go_yarpc//api/transport",
        "@org_uber_go_yarpc//transport/grpc",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "example",
    embed = [":example_lib"],
    visibility = ["//visibility:public"],
)
