load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "graphrunner",
    srcs = [
        "graph_runner.go",
        "native.go",
        "shell.go",
    ],
    importpath = "github.com/uber/tango/graphrunner",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//core/bazel",
        "//core/git",
        "//core/targethasher",
        "//core/workspace",
        "@com_github_uber_go_tally//:tally",
    ],
)

go_test(
    name = "graphrunner_test",
    srcs = ["native_test.go"],
    embed = [":graphrunner"],
    deps = [
        "//core/bazel",
        "//core/bazel/bazelmock",
        "//core/git/gitmock",
        "//core/workspace",
        "@com_github_bazelbuild_buildtools//build_proto",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_uber_go_mock//gomock",
    ],
)
