load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "orchestrator",
    srcs = [
        "errors.go",
        "native_orchestrator.go",
        "orchestrator.go",
    ],
    importpath = "github.com/uber/tango/orchestrator",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//core/bazel",
        "//core/cachekey",
        "//core/common",
        "//core/errors",
        "//core/git",
        "//core/repomanager",
        "//core/storage",
        "//core/workspace",
        "//entity",
        "//graphrunner",
        "@com_github_uber_go_tally//:tally",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "orchestrator_test",
    srcs = [
        "errors_test.go",
        "native_orchestrator_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":orchestrator"],
    deps = [
        "//config",
        "//core/errors",
        "//core/git",
        "//core/git/gitmock",
        "//core/repomanager",
        "//core/repomanager/mock",
        "//core/storage",
        "//core/storage/storagemock",
        "//core/targethasher",
        "//core/workspace/workspacemock",
        "//entity",
        "//graphrunner/mock",
        "//tangopb",
        "@com_github_gogo_protobuf//io",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_uber_go_mock//gomock",
        "@org_uber_go_zap//zaptest",
    ],
)
