load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cachekey",
    srcs = ["cachekey.go"],
    importpath = "github.com/uber/tango/core/cachekey",
    visibility = ["//visibility:public"],
    deps = [
        "//entity",
        "//internal/url",
    ],
)

go_test(
    name = "cachekey_test",
    srcs = ["cachekey_test.go"],
    embed = [":cachekey"],
    deps = [
        "//entity",
        "@com_github_stretchr_testify//assert",
    ],
)
