load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "common",
    srcs = ["utils.go"],
    importpath = "github.com/uber/tango/core/common",
    visibility = ["//visibility:public"],
    deps = ["//tangopb"],
)

go_test(
    name = "common_test",
    srcs = ["utils_test.go"],
    embed = [":common"],
    deps = [
        "//tangopb",
    ],
)
