load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "common",
    srcs = [
        "errors.go",
        "utils.go",
    ],
    importpath = "github.com/uber/tango/core/common",
    visibility = ["//visibility:public"],
    deps = [
        "//core/targethasher",
        "//internal/mapper/idmapper",
        "//tangopb",
        "@com_github_bazelbuild_buildtools//build_proto",
    ],
)

go_test(
    name = "common_test",
    srcs = ["utils_test.go"],
    embed = [":common"],
    deps = [
        "//core/targethasher",
        "//tangopb",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
