load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "errors",
    srcs = ["errors.go"],
    importpath = "github.com/uber/tango/core/errors",
    visibility = ["//visibility:public"],
    deps = ["@org_uber_go_zap//:zap"],
)

go_test(
    name = "errors_test",
    srcs = ["errors_test.go"],
    embed = [":errors"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_uber_go_zap//zapcore",
    ],
)
