load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "git",
    srcs = ["git.go"],
    importpath = "github.com/uber/tango/core/git",
    visibility = ["//visibility:public"],
    deps = [
        "//core/execcmd",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "git_test",
    srcs = ["git_test.go"],
    embed = [":git"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_uber_go_zap//:zap",
    ],
)
