load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "repomanager",
    srcs = ["repo_manager.go"],
    importpath = "github.com/uber/tango/core/repomanager",
    visibility = ["//visibility:public"],
    deps = [
        "//core/git",
        "//core/workspace",
        "//tangopb",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "repomanager_test",
    srcs = ["repo_manager_test.go"],
    embed = [":repomanager"],
    deps = [
        "//core/git/gitmock",
        "//tangopb",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_uber_go_mock//gomock",
        "@org_uber_go_zap//:zap",
    ],
)
