load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "storage",
    srcs = [
        "graphreader.go",
        "graphwriter.go",
        "memstorage.go",
        "storage.go",
    ],
    importpath = "github.com/uber/tango/core/storage",
    visibility = ["//visibility:public"],
    deps = [
        "//tangopb",
        "@org_golang_google_protobuf//encoding/protodelim",
    ],
)

go_test(
    name = "storage_test",
    srcs = ["storage_test.go"],
    embed = [":storage"],
    deps = ["@com_github_stretchr_testify//assert"],
)
