load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "storage",
    srcs = [
        "changedtargetsreader.go",
        "ctxreader.go",
        "graphreader.go",
        "graphwriter.go",
        "memstorage.go",
        "reader.go",
        "storage.go",
    ],
    importpath = "github.com/uber/tango/core/storage",
    visibility = ["//visibility:public"],
    deps = [
        "//tangopb",
        "@com_github_gogo_protobuf//io",
        "@com_github_gogo_protobuf//proto",
    ],
)

go_test(
    name = "storage_test",
    srcs = ["storage_test.go"],
    embed = [":storage"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
