load("@rules_go//extras:gomock.bzl", "gomock")
load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "targethasher",
    srcs = [
        "graph.go",
        "sourcehasher.go",
    ],
    importpath = "github.com/uber/tango/core/targethasher",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bazelbuild_buildtools//build_proto",
        "@com_github_bazelbuild_buildtools//labels",
        "@com_github_deckarep_golang_set_v2//:golang-set",
    ],
)

go_test(
    name = "targethasher_test",
    srcs = [
        "graph_test.go",
        "mock_sourcehasher_test.go",
        "sourcehasher_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":targethasher"],
    deps = [
        "//core/bazel",
        "@com_github_bazelbuild_buildtools//build_proto",
        "@com_github_deckarep_golang_set_v2//:golang-set",
        "@com_github_golang_mock//gomock",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)

gomock(
    name = "mock_sourcehasher",
    out = "mock_sourcehasher_test.go",
    interfaces = ["SourceHasher"],
    library = ":targethasher",
    package = "targethasher",
)
