load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "workspace",
    srcs = [
        "gitrequest.go",
        "request.go",
        "workspace.go",
    ],
    importpath = "github.com/uber/tango/core/workspace",
    visibility = ["//visibility:public"],
    deps = [
        "//core/git",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "workspace_test",
    srcs = [
        "gitrequest_test.go",
        "request_test.go",
        "workspace_test.go",
    ],
    embed = [":workspace"],
    deps = [
        "//core/git",
        "//core/git/gitmock",
        "//core/workspace/requestmock",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_uber_go_mock//gomock",
        "@org_uber_go_zap//:zap",
    ],
)
