load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "mapper",
    srcs = [
        "build_description.go",
        "errors.go",
        "target_graph.go",
    ],
    importpath = "github.com/uber/tango/internal/mapper",
    visibility = ["//visibility:public"],
    deps = [
        "//core/errors",
        "//entity",
        "//tangopb",
        "@org_uber_go_yarpc//encoding/protobuf",
        "@org_uber_go_yarpc//yarpcerrors",
    ],
)

go_test(
    name = "mapper_test",
    srcs = [
        "build_description_test.go",
        "errors_test.go",
        "target_graph_test.go",
    ],
    embed = [":mapper"],
    deps = [
        "//core/errors",
        "//entity",
        "//tangopb",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_uber_go_yarpc//encoding/protobuf",
        "@org_uber_go_yarpc//yarpcerrors",
    ],
)
