load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "changeanalyzer",
    srcs = ["changeanalyzer.go"],
    importpath = "github.com/uber/tango/core/itg/changeanalyzer",
    visibility = ["//visibility:public"],
    deps = ["//core/git"],
)

go_test(
    name = "changeanalyzer_test",
    srcs = ["changeanalyzer_test.go"],
    embed = [":changeanalyzer"],
    deps = [
        "//core/git",
        "//core/git/gitmock",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_uber_go_mock//gomock",
    ],
)
