load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "mock",
    srcs = ["repomanagermock.go"],
    importpath = "github.com/uber/tango/core/repomanager/mock",
    visibility = ["//visibility:public"],
    deps = [
        "//core/workspace",
        "//entity",
        "@org_uber_go_mock//gomock",
    ],
)
