load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "disk",
    srcs = ["disk.go"],
    importpath = "github.com/uber/tango/core/storage/disk",
    visibility = ["//visibility:public"],
    deps = ["//core/storage"],
)

go_test(
    name = "disk_test",
    srcs = ["disk_test.go"],
    embed = [":disk"],
    deps = [
        "//core/storage",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
